--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@cosmjs/cosmwasm-stargate": "^0.32.2",
+    "@cosmjs/launchpad": "^0.27.1",
     "@cosmjs/stargate": "^0.32.2",
     "@mistralai/mistralai": "^0.0.10",
     "@oraichain/common-contracts-sdk": "^1.0.31",
